Bug #1902 - Calendar Mobile: "About" Menu is overlapped by sitewide calendar

--- a/wp-content/themes/openlab/style.less
+++ b/wp-content/themes/openlab/style.less
@@ -1494,7 +1494,7 @@ body{
         right: 0;
         top: 39px;
         width: 100%;
-        z-index: 1;
+        z-index: 10;
         h2{
             margin: 12px 0;
         }
